# LiangHuaCangKu

./: .gitignore  README.md  pyproject.toml
src/deepseek_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quant_strategy/: main.py
src/quant_strategy/ai/: deepseek_client.py
src/quant_strategy/core/: config.py  models.py
src/quant_strategy/data/: fetcher.py
src/quant_strategy/execution/: orders.py  state_machine.py  trade_executor.py
src/quant_strategy/indicators/: calculator.py
src/quant_strategy/monitoring/: logger.py
src/quant_strategy/scheduler/: tasks.py
src/quant_strategy/signals/: context.py  evaluator.py
src/trading_bot/: __init__.py  main.py
src/trading_bot/ai/: base.py  deepseek_stub.py  models.py
src/trading_bot/config/: loader.py  models.py
src/trading_bot/data/: models.py  provider_base.py  providers.py
src/trading_bot/execution/: executor.py  position.py
src/trading_bot/indicators/: engine.py
src/trading_bot/scheduler/: orchestrator.py
src/trading_bot/strategy/: base.py  models.py  rule_strategy.py
