 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

 [project]
 name = "quant-strategy"
 version = "0.1.0"
 description = "Modular crypto strategy framework with data ingestion, DeepSeek evaluation, and execution orchestration."
 authors = [
   { name = "Strategy Bot", email = "bot@example.com" }
 ]
 requires-python = ">=3.9"
 dependencies = [
   "pydantic>=2.7",
   "httpx>=0.27",
   "pandas>=2.2",
   "numpy>=1.26",
   "tenacity>=9.0",
   "pyyaml>=6.0",
   "rich>=13.7"
 ]

 [project.optional-dependencies]
 dev = [
   "pytest>=8.0",
   "mypy>=1.10"
 ]

 [project.scripts]
 quant-strategy = "quant_strategy.main:cli"
